--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   dynamic_color: ^1.7.0
   collection: any
   image_picker: ^1.1.2
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
   # share and save image
   share_plus: ^10.1.4
   flutter_image_gallery_saver: ^0.0.2
@@ -92,8 +94,9 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   drift_dev: ^2.25.2
-  hive_generator: ^2.0.1
   build_runner: ^2.4.15
+  riverpod_generator: ^2.6.4
+  riverpod_lint: ^2.6.4
 
 # to run: flutter pub run flutter_launcher_icons
 flutter_icons:
