--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ dependencies:
   flutter_native_splash: ^2.4.5
   file_picker: ^9.0.0
 
+  path: any
 dependency_overrides:
   path: ^1.9.1
   meta: ^1.16.0
