--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,9 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   # Localdatabase
-  drift: ^2.25.1
-  sqlite3_flutter_libs: ^0.5.30
-  sqlite3: ^2.7.4
+  drift: ^2.26.0
+  sqlite3_flutter_libs: ^0.5.31
+  sqlite3: ^2.7.5
   path_provider: ^2.1.5
   shared_preferences: ^2.5.2
   rxdart: ^0.28.0
@@ -52,7 +52,7 @@ dependencies:
   intl: any
   grouped_list: ^6.0.0
   fl_chart: ^0.70.2
-  permission_handler: ^11.3.1
+  permission_handler: ^11.4.0
   font_awesome_flutter: ^10.8.0
   wakelock_plus: ^1.2.10
   flutter_slidable: ^4.0.0
@@ -67,14 +67,14 @@ dependencies:
   flutter_image_gallery_saver: ^0.0.2
   archive: ^4.0.4
   # Chart
-  smooth_page_indicator: ^1.2.0+3
+  smooth_page_indicator: ^1.2.1
   # Local Push Notification
   flutter_local_notifications: ^19.0.0
   timezone: ^0.10.0
   # App Native Settings
   flutter_launcher_icons: ^0.14.3
   flutter_native_splash: ^2.4.5
-  file_picker: ^9.0.0
+  file_picker: ^9.2.0
 
   path: any
 dependency_overrides:
@@ -91,10 +91,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  drift_dev: ^2.25.2
+  drift_dev: ^2.26.0
   build_runner: ^2.4.15
-  riverpod_generator: ^2.6.4
-  riverpod_lint: ^2.6.4
+  riverpod_generator: ^2.6.5
+  riverpod_lint: ^2.6.5
 
 # to run: flutter pub run flutter_launcher_icons
 flutter_icons:
